Lock button added, hyprlock, and hyprlock config done

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -2,7 +2,16 @@ $font = JetBrainsMono Nerd Font
 
 general {
     hide_cursor = false
-    color = rgb(0, 255, 0)  # Verde Matrix
+    color = rgb(0, 255, 0)  
+}
+
+background {
+    monitor =
+    path = $HOME/Pictures/frieren2.jpeg
+    position = center
+    fill_mode = fit  # Ajusta la imagen para que cubra toda la pantalla
+    #blur_passes = 2
+    #color = rgb(0, 0, 0)  # Fondo negro absoluto
 }
 
 animations {
@@ -13,35 +22,25 @@ animations {
     animation = inputFieldDots, 1, 2, linear
 }
 
-background {
-    monitor =
-    path = $HOME/Pictures/Meptl.png
-    position = center
-    fill_mode = fit  # Ajusta la imagen para que cubra toda la pantalla
-    #blur_passes = 2
-    #color = rgb(0, 0, 0)  # Fondo negro absoluto
-}
 
 input-field {
     monitor =
     size = 20%, 5%
     outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.0) # Transparente
-
+    dots_size = 0.2
+    dots_spacing = 0.1
+    dots_center = true
+    dots_rounding = -1
+    inner_color = rgba(0, 0, 0, 0) # Transparente
     outer_color = rgba(00ff00cc) rgba(00ff00cc) 0deg   # Verde Matrix
     check_color = rgba(00ff00dd) rgba(00ff00aa) 90deg  # Verde Matrix
     fail_color = rgba(ff0033dd) rgba(aa0033dd) 45deg   # Rojo oscuro al fallar
-
     font_color = rgb(00ff00)  # Verde fosforescente
     fade_on_empty = false
     rounding = 15
-
     font_family = $font
-    placeholder_text = Log in...
+    placeholder_text = Password...
     fail_text = $PAMFAIL
-
-    dots_spacing = 0.3
-
     position = 0, -20
     halign = center
     valign = center
@@ -51,37 +50,55 @@ input-field {
 label {
     monitor =
     text = $TIME
-    font_size = 90
+    font_size = 50
     font_family = $font
     font_color = rgb(00ff00)
     color = rgb(0, 255, 0)
-    position = center
+    position = -100, 0
     halign = center
-    valign = top
+    valign = bottom
+    shadow_passes = 5
+    shadow_size = 10
 }
 
 # DATE
 label {
     monitor =
     text = cmd[update:60000] date +"%A, %d %B %Y"
-    font_size = 25
+    font_size = 30
     font_family = $font
     font_color = rgb(00ff00)
     color = rgb(0, 255, 0)
-    position = center
-    valign = top
+    position = -100, 160
+    valign = bottom
+    shadow_passes = 5
+    shadow_size = 10
 }
 
-# Keyboard layout indicator
+# USER
 label {
     monitor =
-    text = $LAYOUT[en,ru]
-    font_size = 24
+    text = $USER
+    color = rgb(0, 255, 0)
+    font_size = 50
     font_family = $font
     font_color = rgb(00ff00)
-    onclick = hyprctl switchxkblayout all next
+    position = -200, 260
+    valign = bottom
+    shadow_passes = 5
+    shadow_size = 10
+}
 
-    position = center
+image {
+    monitor = 
+    path = $HOME/Pictures/epictechno.png
+    size = 280
+    rounding = -1
+    border_size = 4
+    border_color = rgb(0, 255, 0)
+    rotate = 0
+    reload_time = -1
+    position = 0, 200
     halign = center
     valign = center
 }
