--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -2,16 +2,14 @@ $font = JetBrainsMono Nerd Font
 
 general {
     hide_cursor = false
-    color = rgb(0, 255, 0)  
+    color = rgb(0, 255, 0)
 }
 
 background {
     monitor =
-    path = $HOME/Pictures/frieren2.jpeg
+    path = $HOME/Pictures/lock_wallpapers/evangelion2.png
     position = center
-    fill_mode = fit  # Ajusta la imagen para que cubra toda la pantalla
-    #blur_passes = 2
-    #color = rgb(0, 0, 0)  # Fondo negro absoluto
+    fill_mode = fit
 }
 
 animations {
@@ -22,26 +20,26 @@ animations {
     animation = inputFieldDots, 1, 2, linear
 }
 
-
 input-field {
     monitor =
-    size = 20%, 5%
-    outline_thickness = 3
-    dots_size = 0.2
+    size = 10%, 3%  # Tamaño más proporcional
+    outline_thickness = 2
+    dots_size = 0.15
     dots_spacing = 0.1
     dots_center = true
     dots_rounding = -1
-    inner_color = rgba(0, 0, 0, 0) # Transparente
-    outer_color = rgba(00ff00cc) rgba(00ff00cc) 0deg   # Verde Matrix
-    check_color = rgba(00ff00dd) rgba(00ff00aa) 90deg  # Verde Matrix
-    fail_color = rgba(ff0033dd) rgba(aa0033dd) 45deg   # Rojo oscuro al fallar
-    font_color = rgb(00ff00)  # Verde fosforescente
+    inner_color = rgba(0, 0, 0, 0)
+    outer_color = rgba(00ff00cc)
+    check_color = rgba(00ff00dd)
+    fail_color = rgba(ff0033dd)
+    font_color = rgb(00ff00)
     fade_on_empty = false
-    rounding = 15
+    rounding = 10
     font_family = $font
     placeholder_text = Password...
     fail_text = $PAMFAIL
-    position = 0, -20
+    font_size = 25  # Ajuste de fuente proporcional
+    position = 0, 80  # Centrado y separado de los labels
     halign = center
     valign = center
 }
@@ -50,13 +48,13 @@ input-field {
 label {
     monitor =
     text = $TIME
-    font_size = 50
+    font_size = 40  # Uniforme con input-field
     font_family = $font
     font_color = rgb(00ff00)
     color = rgb(0, 255, 0)
-    position = -100, 0
+    position = 0, -120
     halign = center
-    valign = bottom
+    valign = center
     shadow_passes = 5
     shadow_size = 10
 }
@@ -65,12 +63,13 @@ label {
 label {
     monitor =
     text = cmd[update:60000] date +"%A, %d %B %Y"
-    font_size = 30
+    font_size = 30  # Ligero ajuste para contraste
     font_family = $font
     font_color = rgb(00ff00)
     color = rgb(0, 255, 0)
-    position = -100, 160
-    valign = bottom
+    position = 0, -60
+    halign = center
+    valign = center
     shadow_passes = 5
     shadow_size = 10
 }
@@ -79,26 +78,33 @@ label {
 label {
     monitor =
     text = $USER
-    color = rgb(0, 255, 0)
-    font_size = 50
+    font_size = 30
     font_family = $font
     font_color = rgb(00ff00)
-    position = -200, 260
-    valign = bottom
+    color = rgb(0, 255, 0)
+    position = 0, 0
+    halign = center
+    valign = center
     shadow_passes = 5
     shadow_size = 10
 }
 
 image {
-    monitor = 
+    monitor =
     path = $HOME/Pictures/epictechno.png
-    size = 280
+    size = 200  # Más proporcional al nuevo diseño
     rounding = -1
-    border_size = 4
+    border_size = 3
     border_color = rgb(0, 255, 0)
     rotate = 0
     reload_time = -1
-    position = 0, 200
+    position = 0, 250
     halign = center
     valign = center
 }
+
+# Idea adicional Matrix: efecto glitch suave para texto
+animations {
+    animation = glitch, 1, 3, linear
+}
+
