hyprland.conf template added, wofi menu style add

--- a/hypr/hyprlandtemplate.conf
+++ b/hypr/hyprlandtemplate.conf
@@ -1,37 +1,60 @@
+# This is an example Hyprland config file.
+# Refer to the wiki for more information.
+# https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
 
+# Please note not all available settings / options are set here.
+# For a full list, see the wiki
+
+# You can split this configuration into multiple files
+# Create your files separately and then link them to this file like this:
+# source = ~/.config/hypr/myColors.conf
+
+
+################
 ### MONITORS ###
+################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,3840x2160,auto,auto
 
+###################
 ### MY PROGRAMS ###
+###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nemo
-$menu = wofi --show drun --width 400 --style ~/.config/wofi/themes/matrix.css
+$fileManager = dolphin
+$menu = wofi --show drun
 
+
+#################
 ### AUTOSTART ###
+#################
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-#exec-once = $terminal
+# exec-once = $terminal
 # exec-once = nm-applet &
-#exec-once = ~/waybar/launch.sh
+# exec-once = waybar & hyprpaper & firefox
+exec-once = ~/waybar/launch.sh
 exec-once = waybar & hyprpaper
-#exec-once = google-chrome-stable
 
+#############################
 ### ENVIRONMENT VARIABLES ###
+#############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+
+#####################
 ### LOOK AND FEEL ###
+#####################
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
@@ -110,7 +133,10 @@ misc {
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
+
+#############
 ### INPUT ###
+#############
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
