--- a/waybar/config
+++ b/waybar/config
@@ -38,24 +38,28 @@
     }
   },
   "cpu": {
-    "format": "󰻠 {usage}󱉸"
+    "format": "  CPU: {usage}%@{avg_frequency}GHz",
+    "tooltip": true,
+    "interval": 2,
+    "max-length": 20
   },
   "memory": {
     "states": {
       "warning": 75,
       "critical": 90
     },
-    "format": "▤ {percentage}%",
-    "format-critical": "󰀦 {percentage}%",
+    "format": " 󰋛 MEM: {percentage}%",
+    "format-warning": " 󰋛 MEM: {percentage}%",
+    "format-critical": " 󰋛 MEM: {percentage}%",
     "tooltip": true,
     "tooltip-format": "Memory Used: {used:0.1f} GB / {total:0.1f} GB",
     "interval": 5,
-    "min-length": 7,
-    "max-length": 7
+    "min-length": 9,
+    "max-length": 20
   },
   "disk": {
     "interval": 600,
-    "format": "⛃ {percentage_used}󱉸",
+    "format": " 󰋊 DISK: {percentage_used}%",
     "path": "/"
   },
   "custom/cpuinfo": {
@@ -65,12 +69,12 @@
     "tooltip": true,
     "interval": 5,
     "min-length": 8,
-    "max-length": 8
+    "max-length": 20
   },
   "network": {
     "format-wifi": "📶 {signalStrength}%",
     "format-ethernet": "󰖟 ↓{bandwidthDownBytes}-↑{bandwidthUpBytes}",
-    "format-disconnected": "❌",
+    "format-disconnected": "X",
     "on-click": "bash ~/.config/wofi/scripts/wifimenu.sh"
   },
   "pulseaudio":{
@@ -112,7 +116,7 @@
     "modules": ["clock"]
   },
   "custom/locked": {
-    "format": "🔓",
+    "format": "■",
     "tooltip": false,
     "on-click": "hyprlock"
   },
@@ -139,7 +143,7 @@
     }
   },
   "custom/powermenu": { 
-    "format": "",
+    "format": "⏻",
     "on-click": "pkill wofi || bash ~/.config/wofi/scripts/powermenu.sh",
     "tooltip": false
   },
@@ -151,7 +155,7 @@
     "escape": true
   },
   "custom/random-wallpaper": {
-    "format": "🎲",
+    "format": "⧉",
     "tooltip": false,
     "on-click": "bash ~/.config/waybar/scripts/random_wallpaper.sh"
   },
